# community-radar

./: .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  config.yaml.bak  docker-compose.yml  pyproject.toml
docs/: community-sentiment-analysis.json  community-sentiment-report.md  competitor-opportunities.json  competitor-opportunities.md  pure-pool-pro-community-report.md  pure-pool-pro-report.html  reddit-analysis.md
docs/superpowers/plans/: 2026-06-12-multi-tenant-restructure.md  2026-06-12-reddit-domain-collector.md  (+16 more)
migrations_pg/: env.py
migrations_pg/versions/: 3eb08a5ffee0_add_tasks_table.py  7ec8ee7cafe5_add_heartbeat_at_to_tasks.py  98c5a630f4b7_initial_schema.py
scripts/: =1.27.0  README.md  cli.py  migrate_sqlite_to_pg.py  nightly-export.sh  pyproject.toml
scripts/reddit/: backend.py  bridge.py  feeds.py  playwright_backend.py  post_detail.py
src/: main.py  queue_worker.py
src/analysis/: competitors.py  identity.py  sentiment.py  sentiment_direct.py
src/collectors/: browser_manager.py  discord.py  importer.py  reddit.py  reddit_domain.py  utils.py
src/dashboard/: app.py  config_manager.py  report.py  validation.py
src/db/: migrate.py  models.py  orm.py  queue.py  schema.py  session.py
src/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
tests/: test_client_api.py  test_competitors.py  test_config_manager.py  test_ecosystem_api.py  test_identity_engine.py  test_linked_identities.py  test_migrate.py  test_queue.py  test_raw_messages_enrichment.py  test_reddit_domain.py  test_segmentation.py
(+22 files in other folders)
