[project]
name = "community-radar"
version = "0.1.0"
description = "Cross-platform community intelligence tool"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.0",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
community-radar = "src.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
]
